# fscatalog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
patterns/: bsc-camera.toml  screenshot.toml  signal.toml  whatsapp-video.toml  whatsapp.toml
src/fscatalog/: __init__.py  _version.py  catalog.py  cli.py  diskinfo.py  hasher.py  models.py  patterns.py  scanner.py  storage.py
