[project]
name = "fscatalog"
version = "0.2.0b1"
description = "Fast file cataloging with fd, xxhash and DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Tim Kaluza" }]

dependencies = [
    "xxhash>=3.5",
    "duckdb>=1.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
cli = [
    "tqdm>=4.67",
]

[project.scripts]
fscatalog = "fscatalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fscatalog"]

[dependency-groups]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
